--- a/src/main/resources/application-remote.properties
+++ b/src/main/resources/application-remote.properties
@@ -12,6 +12,9 @@ spring.ai.mcp.server.version=1.0.0
 spring.ai.mcp.server.type=sync
 spring.ai.mcp.server.stdio=false
 
-server.port=3001
-
 spring.main.banner-mode=off
+spring.main.web-application-type=servlet
+
+logging.pattern.console=%clr(%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
+
+server.port=3001
