Simplify build and correct version mismatch

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
             "installMaven": "false",
             "installGradle": "true"
         },
-        "ghcr.io/devcontainers/features/node:1": {}
+        "ghcr.io/devcontainers/features/node:1": {},
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
     }
 
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
