--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -98,15 +98,12 @@ jobs:
           echo "Extracted version: $VERSION"
 
       - name: Upload JAR to GitHub Release
-        uses: actions/upload-release-asset@v1
-        if: ${{ !env.ACT }}  # Skip this step when running with Act
+        run: |
+          JAR_FILE=$(ls build/libs/viso-mcp-server-*.jar)
+          JAR_NAME=$(basename "$JAR_FILE")
+          gh release upload ${{ github.event.release.tag_name }} "$JAR_FILE" --clobber
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: build/libs/viso-mcp-server-${{ env.VERSION }}.jar
-          asset_name: viso-mcp-server-${{ env.VERSION }}.jar
-          asset_content_type: application/java-archive
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -123,8 +120,6 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          build-args: |
-            VERSION=${{ env.VERSION }}
           tags: |
             visotrustai/viso-mcp-server:latest
             visotrustai/viso-mcp-server:${{ github.event.release.tag_name }}
